# spline-fit-vtk

./: CMakeLists.txt  spline.ipynb  spline.py~  splines.cpp~  splines1.cpp
